--- a/themes/default/css/all.css
+++ b/themes/default/css/all.css
@@ -185,6 +185,7 @@ banner h1 {
   font-size: 18px;
   text-transform: uppercase;
   margin-bottom: 4px;
+  width: 600px;
 }
 banner h2 {
   text-shadow: 0px 0px 8px black;
@@ -339,7 +340,7 @@ section .post-wall a:hover .excerpt {
   display: block;
 }
 section .post-wall .twitter table {
-  height: 100%;
+  height: 210px;
 }
 section .post-wall a.button {
   display: table-cell;
@@ -448,7 +449,17 @@ section .right-side ul small {
 }
 footer {
   clear: both;
-  display: none;
+  display: block;
+  padding: 30px 0px;
+  background-color: #7e0039;
+  color: white;
+}
+footer .tag-cloud span {
+  padding: 3px;
+  display: inline-block;
+  background-color: rgba(0, 233, 253, 0.56);
+  border-radius: 4px;
+  margin: 5px;
 }
 .wrapper {
   width: 860px;
