--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -190,6 +190,7 @@ banner {
       font-size: 18px;
       text-transform: uppercase;
       margin-bottom: 4px;
+      width: 600px;
    }
    h2 {
       .text-shadow(0px, 0px, 8px, rgba(0, 0, 0, 1));
@@ -308,7 +309,7 @@ section {
       a:hover .excerpt{display: block}
 
       .twitter table{
-         height: 100%;
+         height: 210px;
       }
       
 
@@ -407,7 +408,20 @@ section {
 
 footer {
    clear: both; 
-   display: none;     
+   display: block;  
+   padding: 30px 0px;
+   background-color: rgb(126, 0, 57);
+   color: white;   
+
+   .tag-cloud{
+      span {
+         padding: 3px;
+         display: inline-block;
+         background-color: rgba(0, 233, 253, 0.56);
+         border-radius: 4px;
+         margin: 5px;         
+      }
+   }
 }
 
 .wrapper {
