--- a/themes/default/css/base.less
+++ b/themes/default/css/base.less
@@ -1,7 +1,22 @@
-@base: #f938ab;
-@primaryColor: #FF7700; /* crimson: #DC143C */
-@primaryColorHover: #CC0066; /* purple: #800080 */
 
+/* Color palette */
+@grena: rgb(231, 69, 69);
+@gold: rgb(250, 180, 30); 
+@pastelViolet: rgb(138, 83, 103);
+@pastelPurple: rgb(166, 133, 184);
+@deepPurple: rgb(63, 8, 28);
+@purple: rgb(133, 49, 92);
+@lighterCream: rgb(237, 233, 204);
+@grayCream: rgb(196, 190, 156);
+
+
+@linkColor: @purple; /* crimson: #DC143C */
+@linkColorHover: @grena; /* purple: #800080 */
+
+@background-light: @lighterCream;
+@background-light2: @grayCream;
+@background-dark: @deepPurple;
+@background-dark2: @purple;
 
 
 
