--- a/themes/default/css/all.css
+++ b/themes/default/css/all.css
@@ -1,3 +1,4 @@
+/* Color palette */
 /* crimson: #DC143C */
 /* purple: #800080 */
 /*---------------------------------------------------
@@ -27,34 +28,6 @@
 @font-face {
   font-family: "HelveticaNeueBdCn";
   src: url('../fonts/HelveticaNeueLTCom-BdCn.ttf') format('truetype'), url('../fonts/HelveticaNeueLTCom-BdCn.woff') format('woff');
-}
-@font-face {
-  font-family: 'SourceSansPro';
-  src: url('../fonts/source-sans-pro/SourceSansPro-ExtraLight-webfont.eot');
-  src: url('../fonts/source-sans-pro/SourceSansPro-ExtraLight-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/source-sans-pro/SourceSansPro-ExtraLight-webfont.woff') format('woff'), url('../fonts/source-sans-pro/SourceSansPro-ExtraLight-webfont.ttf') format('truetype'), url('../fonts/source-sans-pro/SourceSansPro-ExtraLight-webfont.svg#SourceSansProExtraLight') format('../fonts/source-sans-pro/Svg');
-  font-weight: 100;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'SourceSansPro';
-  src: url('../fonts/source-sans-pro/SourceSansPro-Regular-webfont.eot');
-  src: url('../fonts/source-sans-pro/SourceSansPro-Regular-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/source-sans-pro/SourceSansPro-Regular-webfont.woff') format('woff'), url('../fonts/source-sans-pro/SourceSansPro-Regular-webfont.ttf') format('truetype'), url('../fonts/source-sans-pro/SourceSansPro-Regular-webfont.svg#SourceSansProRegular') format('../fonts/source-sans-pro/Svg');
-  font-weight: 300;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'SourceSansPro';
-  src: url('../fonts/source-sans-pro/SourceSansPro-Semibold-webfont.eot');
-  src: url('../fonts/source-sans-pro/SourceSansPro-Semibold-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/source-sans-pro/SourceSansPro-Semibold-webfont.woff') format('woff'), url('../fonts/source-sans-pro/SourceSansPro-Semibold-webfont.ttf') format('truetype'), url('../fonts/source-sans-pro/SourceSansPro-Semibold-webfont.svg#SourceSansProSemibold') format('../fonts/source-sans-pro/Svg');
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'SourceSansPro';
-  src: url('../fonts/source-sans-pro/SourceSansPro-Bold-webfont.eot');
-  src: url('../fonts/source-sans-pro/SourceSansPro-Bold-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/source-sans-pro/SourceSansPro-Bold-webfont.woff') format('woff'), url('../fonts/source-sans-pro/SourceSansPro-Bold-webfont.ttf') format('truetype'), url('../fonts/source-sans-pro/SourceSansPro-Bold-webfont.svg#SourceSansProBold') format('../fonts/source-sans-pro/Svg');
-  font-weight: 500;
-  font-style: normal;
 }
 /* -------------------------------- */
 
@@ -144,7 +117,7 @@ header menu ul li {
   vertical-align: middle;
   /*a:hover, a.selected{                    
                text-decoration: none;
-               border-top: 1px solid @primaryColorHover;               
+               border-top: 1px solid @linkColorHover;               
             }*/
 
 }
@@ -227,7 +200,7 @@ banner .arrow-right {
   background: url(../img/arrow-right.png) no-repeat center;
 }
 section {
-  background: url(../img/corner-shadow-top-left.png) white no-repeat top left;
+  background: url(../img/corner-shadow-top-left.png) no-repeat top left;
   /* overflow:auto; fix bug background-color dont work */
 
 }
@@ -352,21 +325,8 @@ section .post-wall a.button {
   position: absolute;
   top: -18px;
   left: 45%;
-  -moz-opacity: 0.4;
-  -khtml-opacity: 0.4;
-  -webkit-opacity: 0.4;
-  opacity: 0.4;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=40);
-  filter: alpha(opacity=40);
-}
-section .post-wall a.button:hover,
-section .post-wall a.button:active {
-  -moz-opacity: 1;
-  -khtml-opacity: 1;
-  -webkit-opacity: 1;
-  opacity: 1;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
-  filter: alpha(opacity=100);
+  /*.opacity(0.4);*/
+
 }
 section .post-wall a.twitter {
   background-image: url(../img/twitter.png);
@@ -451,13 +411,13 @@ footer {
   clear: both;
   display: block;
   padding: 30px 0px;
-  background-color: #7e0039;
+  background-color: #3f081c;
   color: white;
 }
 footer .tag-cloud span {
   padding: 3px;
   display: inline-block;
-  background-color: rgba(0, 233, 253, 0.56);
+  background-color: #85315c;
   border-radius: 4px;
   margin: 5px;
 }
@@ -478,6 +438,7 @@ body {
   padding: 0px;
   font: 16px "HelveticaNeueLtCn", Arial, sans-serif;
   color: #666666;
+  background-color: #ede9cc;
 }
 small {
   font-size: 80%;
@@ -534,7 +495,7 @@ h3 {
   font-size: 24px;
 }
 a {
-  color: #ff7700;
+  color: #85315c;
   text-decoration: none;
   transition: all 400ms ease;
   -moz-transition: all 400ms ease;
@@ -549,11 +510,9 @@ a {
 }
 a:hover,
 a.selected {
-  color: #cc0066;
+  color: #e74545;
   text-decoration: none;
-  text-shadow: 0px 0px 2px rgba(255, 0, 200, 0.3);
-  -webkit-text-shadow: 0px 0px 2px rgba(255, 0, 200, 0.3);
-  -moz-text-shadow: 0px 0px 2px rgba(255, 0, 200, 0.3);
+  /*.text-shadow(0px, 0px, 2px, rgba(255, 0, 200, 0.3));*/
   background-position: 0px 100%;
 }
 b,
