--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -193,7 +193,7 @@ section {
    .post-wall{
   
       .widget {
-         border: 1px solid #E5E5E5;
+         border: 1px solid @background-light2;
          background-color: white;
          position: relative;
          width: 260px;
