--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -56,7 +56,7 @@ overlay{
 header {  
    position:absolute;   
    background-color: rgba(255, 255, 255, 0.82);
-   border-bottom: 1px solid rgba(255, 255, 255);
+   border-bottom: 1px solid rgba(255, 255, 255, 1);
    /*.gradient(left top, left bottom, 0.95, rgba(255, 255, 255, 0.75), 1,  rgba(255, 255, 255, 0));*/
    padding: 4px 0px;
    z-index: 10; /* cause banner position relative stay hover on the header */
