--- a/themes/default/css/base.less
+++ b/themes/default/css/base.less
@@ -1,22 +1,22 @@
 
 /* Color palette */
-@grena: rgb(231, 69, 69);
-@gold: rgb(250, 180, 30); 
-@pastelViolet: rgb(138, 83, 103);
-@pastelPurple: rgb(166, 133, 184);
-@deepPurple: rgb(63, 8, 28);
-@purple: rgb(133, 49, 92);
-@lighterCream: rgb(237, 233, 204);
-@grayCream: rgb(196, 190, 156);
+
+@gold: rgb(255, 150, 0); 
+@darkgray: rgb(29, 26, 31);
+
+@cherry: rgb(179, 27, 39);
+@deepCherry: rgb(61, 23, 26);
+
+@lighterGray: rgb(255, 255, 235); 
 
 
-@linkColor: @purple; /* crimson: #DC143C */
-@linkColorHover: @grena; /* purple: #800080 */
+@linkColor: @gold; /* crimson: #DC143C */
+@linkColorHover: red; /* purple: #800080 */
 
-@background-light: @lighterCream;
-@background-light2: @grayCream;
-@background-dark: @deepPurple;
-@background-dark2: @purple;
+@background-light: @lighterGray;
+@background-light2: @gold;
+@background-dark: @deepCherry;
+@background-dark2: @cherry;
 
 
 
