--- a/_layouts/post.htm
+++ b/_layouts/post.htm
@@ -4,48 +4,53 @@ layout: default
 
 <article>
 
-  <h1>{{ page.title }}</h1>
-  
-  <h4 class="large-bottom">
-    Posted on {{ page.date | format_date }}
-   <!-- {% if page.category %} em <a href="/categories/{{ page.category | slugize }}">{{ page.category }}</a> {% endif %}-->
-  </h4>
-  
-  
-  <div class="content">
+    <h1>        
+        {{ page.title }}
+        
+        <time>
+            <year>{{ page.date | date: "%Y" }}</year>
+            <day>{{ page.date | date: "%d" }}</day>
+            <month>{{ page.date | date: "%b" | upcase }}</month>            
+        </time>
+    </h1>
+
+    
+
+
+    <div class="content">
     {{ content }}
-  </div>
-  
-  <!--
-  <hr />
-  
-  {% if page.tags %}
+    </div>
+
+    <!-- 
+    <hr />
+
+    {% if page.tags %}
     {% for tag in page.tags %}
       {% if forloop.first %}Tagged in{% endif %}
       <strong><a href="/tags/{{ tag | slugize }}">{{ tag }}</a></strong>{% unless forloop.last %}, {% endunless %}
       {% if forloop.last %}<br />{% endif %}
     {% endfor %}
-  {% endif %}
-  
-  <div class="next-prev-nav low-top">
+    {% endif %}
+
+    <div class="next-prev-nav low-top">
     {% if page.previous.url %}
       &laquo;&nbsp;<a href="{{ page.previous.url }}" rel="previous" title="{{ page.previous.title }}">{{ page.previous.title }}</a>
     {% endif %}
-  
+
     {% if page.previous.url %}
       {% if page.next.url %}
         |
       {% endif %}
     {% endif %}
-    
-  
+
+
     {% if page.next.url %}
       <a href="{{ page.next.url }}" rel="next" title="{{ page.next.title }}">{{ page.next.title }}</a>&nbsp;&raquo;
     {% endif %}
-  
+
     <br />
-  </div>
-  -->
+    </div>
+    -->
 </article>
 
 {% unless page.no_comments %}
