--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -329,7 +329,7 @@ section {
         float: left;
         overflow: hidden;
         
-        h1 { border-bottom: 1px solid black; }
+        h1 { border-bottom: 1px solid black; padding-right: 40px; position: relative;}
         
            
         .artigos, .palestras {
@@ -358,7 +358,7 @@ section {
         .post{ 
             margin-right: 18px;
 
-            time {float:right; padding-right:0px;}
+            time {position: absolute;top: 0px;right: 0px;padding-right:0px;}
             day, month, year{ color: black;}
             year {top:9px; margin-left: -28px}
 
