--- a/_layouts/post.htm
+++ b/_layouts/post.htm
@@ -58,7 +58,7 @@ layout: default
   <div id="disqus_thread"></div>
 
   <script type="text/javascript">
-      var disqus_shortname = 'novafusion';
+      var disqus_shortname = 'sidneyfilho';
       var disqus_identifier = '{{ page.id }}';
       var disqus_url = '{{ site.url }}{{ page.url }}';
       
