--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -80,6 +80,7 @@ header {
     menu {
         float: right;
         margin: 0px;
+        padding: 25px 0px 0px;
         
         ul {
             list-style:none;
@@ -101,9 +102,9 @@ header {
             
             li {
                 padding: 0px 10px;
-                display: table-cell;
-                /*border-right:1px solid #d2d2d2;*/
-                height: 70px;
+                display: inline-block;
+                /*border-right:1px solid #d2d2d2;
+                height: 70px;*/
                 vertical-align: middle;
                 
                 a {
@@ -137,27 +138,27 @@ banner {
     background-position: center;
     vertical-align: bottom;
     
-    .wrapper{
-        position: absolute;
-        bottom: 0px;
-        left: 50%;
-        margin-left: -430px; /* .wrapper original width is 860px, then 50% is 430px */
-    }
+    
+    .wrapper{ height:100%; }
+
+    .excerpt { position: absolute; bottom: 0px; }
+    
     
     h1 {
-        .text-shadow(0px, 0px, 8px, rgba(255, 255, 255, 0.5));
+        .text-shadow(0px, 0px, 4px, rgba(0, 0, 0, 1));
         font-family: "HelveticaNeueBdCn", "HelveticaNeueW01-77BdCn 692722", Helvetica, sans-serif;
         font-size: 18px;
         text-transform: uppercase;
         margin-bottom: 4px;
-        width: 600px;
+        max-width: 600px;
+        color: white;
     }
     h2 {
-        .text-shadow(0px, 0px, 8px, rgba(0, 0, 0, 1));
+        .text-shadow(0px, 0px, 4px, rgba(0, 0, 0, 1));
         color: white;
         font-size: 32px;
         line-height: 30px;
-        width: 600px;
+        max-width: 600px;
     }
     
     .arrow-left, .arrow-right {
@@ -408,8 +409,9 @@ footer {
 }
 
 .wrapper {
-    width:860px;
+    max-width:860px;
     margin:0 auto;
+    padding: 0px 4px;
     position: relative;
 }
 
