1) Limitado a descrição do conteúdo externo em 300 chars 2) Adicionado social media

--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -12,12 +12,6 @@
         <meta http-equiv="X-UA-Compatible" content="chrome=1" />
         <meta name="google-translate-customization" content="6b8d269fcbc1b6d5-0fa0d030d26cbeaf-ga791899a89db06bb-16"
         />
-        <script src="http://code.jquery.com/jquery-1.8.0.min.js" type="text/javascript">        
-        </script>
-        <script src="/themes/default/js/linq.js" type="text/javascript">        
-        </script>
-        <script src="/themes/default/js/moment/moment.min.js" type="text/javascript">        
-        </script>
         <!--[if lt IE 9]>
             <script src="//html5shiv.googlecode.com/svn/trunk/html5.js">            
             </script>
@@ -26,16 +20,14 @@
             <script type="text/javascript" src="http://fast.fonts.com/jsapi/d34e3f76-678a-447e-a024-f6b2e5185713.js">            
             </script>
         <![endif]-->
-        <script src="http://www.google.com/jsapi" type="text/javascript">        
-        </script>
-        <script src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.0.js" type="text/javascript">        
-        </script>
-        <script src="/themes/default/js/tags.js" type="text/javascript">        
-        </script>
-        <script src="/themes/default/js/quotes.js" type="text/javascript">        
-        </script>
-        <script src="/themes/default/js/user.js" type="text/javascript">        
-        </script>
+        <script src="http://code.jquery.com/jquery-1.8.0.min.js" type="text/javascript"></script>
+        <script src="http://www.google.com/jsapi" type="text/javascript"></script>
+        <script src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.0.js" type="text/javascript"></script>
+        <script src="/themes/default/js/linq.js" type="text/javascript"></script>
+        <script src="/themes/default/js/moment/moment.min.js" type="text/javascript"></script>             
+        <script src="/themes/default/js/tags.js" type="text/javascript"></script>
+        <script src="/themes/default/js/quotes.js" type="text/javascript"></script>
+        <script src="/themes/default/js/user.js" type="text/javascript"></script>
     </head>
     
     <body>
@@ -130,9 +122,8 @@
                     </small>
                 </p>
             </div>
-        </footer>
+        </footer>      
     </body>
-
 </html>
 <script type="text/javascript">
 for (var key in User) {
@@ -145,4 +136,9 @@ for (var key in User) {
     }
 }
 </script>
-<!-- <script type="text/javascript"> function googleTranslateElementInit() {new google.translate.TranslateElement({pageLanguage: 'pt', includedLanguages: 'en', layout: google.translate.TranslateElement.FloatPosition.TOP_RIGHT }, 'google_translate_element'); } </script> <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"> </script> -->
+<script type="text/javascript">var switchTo5x=true;</script>
+<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript">
+    stLight.options({publisher: "ed98425d-33e8-4e66-a1e2-aa565f8ef166", doNotHash: true, doNotCopy: true, hashAddressBar: false});
+</script>
+
