--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -263,7 +263,7 @@ section {
         } 
     }
 
-   time{
+    time{
         width: 24px;
         text-align: left;
         float: left;
@@ -323,6 +323,15 @@ section {
     
     nav {float: right;}
         
+    .social-buttons{ padding:10px 0px 20px; }
+
+    .nav-next-prev { 
+        padding: 10px 0px;
+        .next{text-align: right; padding: 0px 0px 10px;}
+        .previous{ text-align: left; padding: 0px 0px 10px;}
+    }
+
+    .comments{ padding: 20px 0px 0px 0px }
     
     .left-side {
         width: 600px;
@@ -362,7 +371,6 @@ section {
             time {position: absolute;top: 0px;right: 0px;padding-right:0px;}
             day, month, year{ color: black;}
             year {top:9px; margin-left: -28px}
-
         }
         
     }
