--- a/themes/default/css/base.less
+++ b/themes/default/css/base.less
@@ -6,8 +6,10 @@
 
 @cherry: rgb(179, 27, 39);
 @deepCherry: rgb(61, 23, 26);
-
 @lighterGray: rgb(255, 255, 235); 
+
+@glass: rgba(255, 255, 255, 0.82);
+@smoke: rgba(0, 0, 0, 0.82);
 
 
 @linkColor: @gold; /* crimson: #DC143C */
