--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -5,7 +5,7 @@
         <title>Sidney Lima Filho {% if page.title %}- {{ page.title }}{% endif %}
         </title>
         <link href="/themes/default/css/all.css" rel="stylesheet" />
-        <link href="/rss.xml" class="feed" rel="alternate" type="application/rss+xml" title="sidneylimafilho.com.br"
+        <link href="http://feeds.feedburner.com/sidneyfilho/" class="feed" rel="alternate" type="application/rss+xml" title="sidneylimafilho.com.br"
         />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <meta charset="utf-8" />
