--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -12,6 +12,7 @@
         <meta http-equiv="X-UA-Compatible" content="chrome=1" />
         <meta name="google-translate-customization" content="6b8d269fcbc1b6d5-0fa0d030d26cbeaf-ga791899a89db06bb-16"
         />
+        <meta name="google-site-verification" content="Pr8cH5u5tY0QHDX951vrlp84EyJlWdOnCgS9UQhxLmg" />
         <!--[if lt IE 9]>
             <script src="//html5shiv.googlecode.com/svn/trunk/html5.js">            
             </script>
