--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -128,23 +128,32 @@
                     </p>
                 </div>
             </div>
-        </footer>      
+        </footer> 
     </body>
+
+    <!-- populate social media links -->
+    <script type="text/javascript">
+    for (var key in User) if (media = User[key]) 
+        if (media.getUrl) {        
+            $("." + key).attr({ "target":"_blank", "href": User[key].getUrl(), "title": User[key].title });        
+        }
+    </script>
+    <!-- Share buttons in posts  -->
+    <script type="text/javascript">var switchTo5x=true;</script>
+    <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+    <script type="text/javascript">
+        stLight.options({publisher: "ed98425d-33e8-4e66-a1e2-aa565f8ef166", doNotHash: true, doNotCopy: true, hashAddressBar: false});
+    </script>
+    <!-- Google Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-39703309-1', 'sidneylimafilho.com.br');
+      ga('send', 'pageview');
+    </script> 
 </html>
-<script type="text/javascript">
-for (var key in User) {
-    if (User[key].getUrl) {
-        $("." + key).attr({
-            "target":"_blank",
-            "href": User[key].getUrl(),
-            "title": User[key].title
-        });
-    }
-}
-</script>
-<script type="text/javascript">var switchTo5x=true;</script>
-<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
-<script type="text/javascript">
-    stLight.options({publisher: "ed98425d-33e8-4e66-a1e2-aa565f8ef166", doNotHash: true, doNotCopy: true, hashAddressBar: false});
-</script>
+
 
